--- a/friend.html
+++ b/friend.html
@@ -9,7 +9,7 @@
 </head>
 <body bgcolor=skyblue>
     <h1 style=" color: rgb(255, 0, 255);"> MY FRIEND'S DIALY ROUTINE</h1>
-    <img src="C:\Users\HP\Downloads\friends forever.jpg"  alt="friends"  width="400" height="300" /><h1 style="color:red">sana</h1>
+    <img src="C:\Users\HP\Downloads\friends forever.jpg"  alt="friends"  width="400" height="300" /><h1 style="color:red">PALLAVI</h1>
     <h2 style=" color: rgb(217, 0, 255);">In the morning</h2>
     <ol> 
         <li>wake up at 7 am  </li>
@@ -40,10 +40,17 @@
         <li>  Painting </li>
         <li>  playing with her dog </li>   
         <li>  trvelling </li>  
+        <li>  watching dramas </li> 
       
     </ol>
     <p style="font-style: initial; color: blue;">one  of the drawing of my friend </p>
     <img src= "C:\Users\HP\Downloads\demon slayer hashiras.jpg"  alt=""  width="300" height="200" />
+      <ul> 
+        <li> <h2  style=" color: rgb(132, 126, 133);"> NAME:</h2> Pallavi</li> 
+        <li> <h2 style=" color: rgb(121, 119, 121);"> HOBBY:</h2> Playing out door games</li> 
+        <li> <h2 style=" color: rgb(114, 111, 114);"> FAV COLOUR:</h2> Blue</li> 
+      </ul>
+
 
     
 
